Fix/filemanager functionality (#225)
This pull request refactors and improves the file management endpoints
in `ImSwitchServer.py` to provide more consistent API responses and
better frontend compatibility. The changes include switching to JSON
request bodies for most endpoints, returning detailed metadata for
created, uploaded, copied, moved, and deleted items, and improving error
handling and path resolution. These updates make the API more robust and
easier to integrate with frontend applications.

**API request/response improvements:**

* Switched most file management endpoints (`create_folder`,
`upload_file`, `copy_item`, `move_item`, `rename_item`, `delete_item`)
to accept and process JSON request bodies instead of form data, enabling
more flexible and consistent client interactions.
[[1]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL121-R158)
[[2]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL210-R366)

* Updated the responses for folder creation, file upload, and directory
scanning to return detailed metadata (including `name`, `isDirectory`,
`path`, `_id`, `size`, `filePreviewPath`, and `modifiedTime`) that
matches the structure expected by the frontend.
[[1]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL121-R158)
[[2]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaR186)
[[3]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL210-R366)

**Path handling and compatibility:**

* Improved path resolution and normalization using the `pathlib` module,
ensuring that paths are handled consistently and safely across all
endpoints.
[[1]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL5-R7)
[[2]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e938606be427bbeaL121-R158)
[[3]](diffhunk://#diff-7b803fa474b16468935fa1e32f7463d3a99c6542635b07e8e9

--- a/.github/workflows/test-uv.yml
+++ b/.github/workflows/test-uv.yml
@@ -3,16 +3,16 @@ name: test-uv
 on:
   push:
     branches:
-      - 'master'
-      - 'main'
+      - "master"
+      - "main"
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
   merge_group:
   workflow_dispatch:
     inputs:
       git-ref:
-        description: 'Git ref (optional)'
+        description: "Git ref (optional)"
         required: false
 
 jobs:
