--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,13 @@
     // Weitere Informationen finden Sie unter https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
+    
+        
+
+
+
         {
             "name": "Python: Aktuelle Datei",
             "type": "python",
@@ -12,6 +19,8 @@
             "console": "integratedTerminal",
             "justMyCode": false, 
             "subProcess": true,
+            "python": "${workspaceFolder}/.venv/bin/python"
+
 
         },
         {
